@@ -153,7 +153,17 @@ public class AnnualScheduleGenerator {
                         workPlan.insertActivityToFirstAvailableDate(maxFirst, maxSecond);
                     }
                     else {
-                        workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0));
+                        while(instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).size() > 1) {
+                            goalsPriorityQueue.add(new Pair<>(goalsPriorityQueue.get(0).getFirst(), instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).remove(0)));
+                            goalsPriorityQueue.add(new Pair<>(goalsPriorityQueue.get(0).getFirst(), instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).remove(0)));
+                            workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0), goalsPriorityQueue.get(1));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
+                            goalsPriorityQueue.remove(0);
+                            goalsPriorityQueue.remove(0);
+                        }
+                        if (instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).size() > 0) {
+                            goalsPriorityQueue.add(new Pair<>(goalsPriorityQueue.get(0).getFirst(), instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).remove(0)));
+                        }
+                        workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
                         goalsPriorityQueue.remove(0);
                         //todo make sure you stop when you fill WorkPlan
                         //todo when finishing work plan assign it to the instructor
@@ -246,19 +256,34 @@ public class AnnualScheduleGenerator {
                         if (instructorWithProblemsForSchools.get(instructor).get(maxSecond.getFirst()) != null && instructorWithProblemsForSchools.get(instructor).get(maxSecond.getFirst()).size() > 0) {
                             goalsPriorityQueue.add(new Pair<>(maxSecond.getFirst(), instructorWithProblemsForSchools.get(instructor).get(maxSecond.getFirst()).remove(0)));
                             //System.out.println(instructorWithProblemsForSchools.get(instructor).get(maxSecond.getFirst()).get(0));
-
                         }
                         workPlan.insertActivityToFirstAvailableDate(maxFirst, maxSecond);
                     }
                     else {
-                        if (instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).size() > 0) {
-                            goalsPriorityQueue.add(new Pair<>(goalsPriorityQueue.get(0).getFirst(), instructorWithProblemsForSchools.get(instructor).get(goalsPriorityQueue.get(0).getFirst()).remove(0)));
+                        String lastSchool = goalsPriorityQueue.get(0).getFirst();
+                        if(instructorWithProblemsForSchools.get(instructor).get(lastSchool).size() > 0) {
+                            goalsPriorityQueue.add(new Pair<>(lastSchool, instructorWithProblemsForSchools.get(instructor).get(lastSchool).remove(0)));
+                            workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0), goalsPriorityQueue.get(1));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
+                            goalsPriorityQueue.remove(0);
+                            goalsPriorityQueue.remove(0);
                         }
-                        workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
-                        goalsPriorityQueue.remove(0);
+                        while(instructorWithProblemsForSchools.get(instructor).get(lastSchool).size() >= 2) {
+                            goalsPriorityQueue.add(new Pair<>(lastSchool, instructorWithProblemsForSchools.get(instructor).get(lastSchool).remove(0)));
+                            goalsPriorityQueue.add(new Pair<>(lastSchool, instructorWithProblemsForSchools.get(instructor).get(lastSchool).remove(0)));
+                            workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0), goalsPriorityQueue.get(1));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
+                            goalsPriorityQueue.remove(0);
+                            goalsPriorityQueue.remove(0);
+                        }
+                        if (instructorWithProblemsForSchools.get(instructor).get(lastSchool).size() > 0) {
+                            goalsPriorityQueue.add(new Pair<>(lastSchool, instructorWithProblemsForSchools.get(instructor).get(lastSchool).remove(0)));
+                            workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.get(0));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
+                            goalsPriorityQueue.remove(0);
+                        }
+                        if (goalsPriorityQueue.size() > 0) {
+                            workPlan.insertActivityToFirstAvailableDate(goalsPriorityQueue.remove(0));//todo check if activities are only from 1 school them they should be stacked 2 a day and not just 1
+                        }
                         //todo make sure you stop when you fill WorkPlan
                         //todo when finishing work plan assign it to the instructor
-                        //todo if there is only 1 school left with activities push 2 at a time every day not 1
                     }
                 }
                 userController.assignWorkPlan(instructor, workPlan);
